# rlautoguilayout

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
example/: CMakeLists.txt  application_gui_example.c  centered_menu_buttons_example.c
example/raygui/: CMakeLists.txt
example/raygui/test_suite/: CMakeLists.txt  test_suite_example.c
include/rlauto_layout/: draw_functions.h  raygui_draw_functions.h  raylib_draw_functions.h  tree.h  type_defs.h
source/: draw_functions.c  raygui_draw_functions.c  raylib_draw_functions.c  tree.c
test/: CMakeLists.txt
